logs/infi.logs-collector.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Brownie-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/brownie'...
Listing './lib/python3.5/site-packages/brownie/datastructures'...
Compiling './lib/python3.5/site-packages/brownie/datastructures/sequences.py'...
***   File "./lib/python3.5/site-packages/brownie/datastructures/sequences.py", line 683
    print code
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/brownie/tests'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/emport'...
Listing './lib/python3.5/site-packages/emport-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/infi'...
Listing './lib/python3.5/site-packages/infi/blocking'...
Listing './lib/python3.5/site-packages/infi/cwrap'...
Listing './lib/python3.5/site-packages/infi/eventlog'...
Listing './lib/python3.5/site-packages/infi/eventlog/c_api'...
Listing './lib/python3.5/site-packages/infi/eventlog/facade'...
Compiling './lib/python3.5/site-packages/infi/eventlog/facade/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/eventlog/facade/__init__.py", line 80
    except c_api.WindowsException, error:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/eventlog/tests'...
Listing './lib/python3.5/site-packages/infi/exceptools'...
Listing './lib/python3.5/site-packages/infi/execute'...
Listing './lib/python3.5/site-packages/infi/instruct'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer/reference'...
Listing './lib/python3.5/site-packages/infi/instruct/struct'...
Listing './lib/python3.5/site-packages/infi/instruct/utils'...
Listing './lib/python3.5/site-packages/infi/logs_collector'...
Listing './lib/python3.5/site-packages/infi/logs_collector/collectables'...
Compiling './lib/python3.5/site-packages/infi/logs_collector/collectables/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/logs_collector/collectables/__init__.py", line 79
    except IOError, error:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/logs_collector/collectables/windows'...
Listing './lib/python3.5/site-packages/infi/logs_collector/scripts'...
Compiling './lib/python3.5/site-packages/infi/logs_collector/scripts/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/logs_collector/scripts/__init__.py", line 77
    except (ValueError, TypeError), msg:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/monotonic_time'...
Listing './lib/python3.5/site-packages/infi/pyutils'...
Listing './lib/python3.5/site-packages/infi/pyutils/functors'...
Listing './lib/python3.5/site-packages/infi/traceback'...
Listing './lib/python3.5/site-packages/infi/wioctl'...
Listing './lib/python3.5/site-packages/infi.blocking-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/infi.cwrap-0.2.12.egg-info'...
Listing './lib/python3.5/site-packages/infi.eventlog-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/infi.exceptools-0.2.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.execute-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/infi.instruct-0.6.31.egg-info'...
Listing './lib/python3.5/site-packages/infi.logs_collector-0.1.16.egg-info'...
Listing './lib/python3.5/site-packages/infi.monotonic_time-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.pyutils-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/infi.traceback-0.3.15.egg-info'...
Listing './lib/python3.5/site-packages/infi.wioctl-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/msgpack_rpc_python-0.4.egg-info'...
Listing './lib/python3.5/site-packages/msgpackrpc'...
Listing './lib/python3.5/site-packages/msgpackrpc/transport'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tblib'...
Listing './lib/python3.5/site-packages/tblib-1.3.2.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
